[tool.poetry]
name = "fastapi-server"
version = "0.0.1"
description = "fastAPI REST API server"
authors = ["kij"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlmodel = "^0.0.14"
pre-commit = "^3.6.2"
black = "^24.2.0"
pylint = "^3.0.3"
isort = "^5.13.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "4.0.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
pycln = "^2.4.0"
isort = "^5.13.2"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
